Links visibility fixed

--- a/style.css
+++ b/style.css
@@ -13,6 +13,17 @@
   box-sizing: border-box;
 }
 
+a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+a:hover {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
